--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 VITE_API_URL=http://localhost:3001/api
+
+# Keycloak
+VITE_KEYCLOAK_URL=https://keycloak-production-9856.up.railway.app
+VITE_KEYCLOAK_REALM=stock-management
+VITE_KEYCLOAK_CLIENT_ID=stock-management-client
