--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.13.4",
     "date-fns": "^4.1.0",
+    "keycloak-js": "^26.2.3",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
